--- a/index.html
+++ b/index.html
@@ -1,134 +1,61 @@
 
-<!DOCTYPE html>
 
+<!DOCTYPE html>
 <html lang="en">
+
+<html>
+
 
 <head>
 	<meta charset="UTF-8">
-	<title>Главная страница</title>
-	<meta name="description" content="Кинобаза - это портал о кино" />
-	<meta name="keywords" content="фильмы, фильмы онлайн, HD" />
-	<link rel="stylesheet" href="assets/css/style.css" />
+	<title>Портфолио</title>
+	<meta name="description" content="Приветствую вас на странице моего портфолио." />
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Underdog&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/styles.css" />
+	<link rel="shortcut icon" href="assets/img/icon.jpg" widht="10" height="5" type="image/jpg">
 </head>
 
+
+<header>
+	<h1>Меня зовут ............ , я начинаюший разработчик ПО и хотел бы представить вам своё портфолио:</h1>		
+</header>
+
+
+
 <body>
-	<div class="main">
-		<div class="header">
-			<div class="logo">
-				<div class="logo text"
-					<h1><a href="index.html">Кинобаза</a></h1>
-					<h2>Кино - наша страсть</h2>
-				</div>
-			</div>
-
-			<div class="menubar">
-
-				<ul class="menu">
-					<li class="selected"><a href="index.html">Главная</a></li>
-					<li><a href="films.html">Фильмы</a></li>
-					<li><a href="#">Сериады</a></li>
-					<li><a href="rating.html">Рейтинг фильмов</a></li>
-					<li><a href="contact.html">Контакты</a></li>
-				</ul>
-			</div>
-		</div>
-
-		<div class="site content">
-
-			<div class="sidebar_container">
-
-				<div class="sidebar">
-					<h2>Поиск</h2>
-					<form method="post" action="#" id="search_form">
-						<input type="search" name="search_field" placeholder="ваш запрос" />
-						<input type="submit" class="btn" value="найти" />
-					</form>
-				</div>
-
-				<div class="sidebar">
-					<h2>Вход</h2>
-					<form method="post" action="#" id="login" >
-
-						<input type="text" name="login_field" placeholder="логин" />
-						<input type="password" name="password_field" placeholder="пароль" />
-						<input type="submit" class="button" value="вход" />
-						<div class="lables_passreg_text" >
-							<span><a href="#">Забыли пароль? </a></span> | <span><a href="#">Регистрация</a></span>
-						</div>
-					</form>
-				</div>
-
-				<div class="sidebar">
-					<h2>Новости</h2>
-					<span>31.02.18</span>
-					<p>Мы запустили расширенный поиск</p>
-					<a href="#">Читать</a>
-				</div>
-
-				<div class="sidebar"
-					<h2>Рейтинг фильмов</h2>
-					<ul>
-						<li><a href="show.html">Интерстеллар</a><span class="rating_sidebar">8.1</span></li>
-						<li><a href="show.html">Матрица</a><span class="rating_sidebar">8.0</span></li>
-						<li><a href="show.html">Безумный макс</a><span class="rating_sidebar">7.5</span></li>
-						<li><a href="show.html">Облачный атлас</a><span class="rating_sidebar">7.4</span></li>
-					</ul>
-				</div>
-			</div>
-
-			<div class="content">
-				<h1>Новые фильмы</h1>
-				<div class="films_block">
-					<a href="#"><img src="assets/img/matrix.png"></a>
-					<a href="#"><img src="assets/img/max.png"></a>
-					<a href="show.html"><img src="assets/img/inter.png"></a>
-					<a href="#"><img src="assets/img/cloud.png"></a>
-				</div>
-
-				<h1>Новые сериалы</h1>
-				<div class="films_block">
-					<a href="#"><img src="assets/img/dead.png"></a>
-					<a href="#"><img src="assets/img/silicon.png"></a>
-					<a href="#"><img src="assets/img/breakingbad.png"></a>
-					<a href="#"><img src="assets/img/xfiles.png"></a>
-				</div>
-
-				<div class="posts">
-					<hr>
-					<h2> <a href="#">Как снимали Интерстеллар</a> </h2>
-					<div class="post_content">
-						<p>
-							45 лет исполнилось Кристоферу Ноллану - одному из самыз успешных режиссёров нашнго времени, ............................................
-						</p>
-					</div>
-
-					<p><a href="#">Читать</a></p>
-
-					<hr>
-					<h2><a href="#">Актёр Том Хэнкс поделился впечататлениями о фестивале</a></h2>
-					<div class="posts_content">
-						<p>
-							16 февраля в Лондрне состоялась 67-я церемония вручения наград .......................
-						</p>
-					</div>
-					<p><a href="#">Читать</a></p>
-				</div>
-
-			</div>
-		</div>
-
-	<div class="footer">
+	<article>
 		<p>
-			<a href="index.html">Главная</a> |
-			<a href="films.html">Фильмы</a> |
-			<a href="#">Сериалы</a> |
-			<a href="rating.html">Рейтинг фильмов</a> |
-			<a href="contact.html">Контакты</a> |
-		</p>
-		<p>kinopoisk.ru</p>
-	</div>
+			<h1>Ссылки на мои работы:</h1>
+				<ul>
+					<li><a href="kinobaza\index.html">Сайт на HTML/CSS</a></li>
+					<li><a href="...........html">Сайт на ........</a></li>
+					<li><a href="...........html">Сайт на ........</a></li>
+				</ul>
+		</p>		
 
-</div>
+	</article>
+
+	<article>
+		<p>
+			<img src="assets/img/pic.jpg">			
+		</p>
+	</article>
 
 </body>
+
+
+
+<footer>
+		<p>
+			<h2>Мои контакты для связи:</h2>
+				<ul>
+					<li><a href="........@mail.ru">........@mail.ru</a></li>
+					<li><a href="+372.......">+372.......</a></li>
+				</ul>
+		</p>
+</footer>
+
+
+
 </html>
