--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<h1>Ссылки на мои работы:</h1>
 				<ul>
 					<li><a href="kinobaza\index.html">Сайт на HTML/CSS</a></li>
-					<li><a href="kinobaza_bootstrap\index.html">Сайт на Bootstrap</a></li>
+					<li><a href="kinobaza2bootstrap\index.html">Сайт на Bootstrap</a></li>
 					<li><a href="...........html">Сайт на ........</a></li>
 				</ul>
 		</p>		
